ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masgud
  namespace: masgud
  annotations:
    kubernetes.io/ingress.class: kong
    # ssl certificate
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    # dns record
    external-dns.alpha.kubernetes.io/hostname: wa.karc.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - wa.karc.io
      secretName: certio
  rules:
    - host: wa.karc.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: masgud-whatsapp
                port:
                  number: 3000
